chore: Add coveralls code coverage

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -27,5 +27,9 @@ jobs:
     - run: curl -L https://unpkg.com/@pnpm/self-installer | node
     - run: pnpm install
     - run: pnpm run test
+    - name: Coveralls
+      uses: coverallsapp/github-action@master
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
       env:
         CI: true
